# plonky2-bn254-pairing

./: Cargo.toml  README.md
src/: final_exp_native.rs  final_exp_target.rs  lib.rs  miller_loop_native.rs  miller_loop_target.rs  pairing.rs
src/aggregation/: fq12_exp.rs  fq12_exp_witness.rs  fq12_generate_witness.rs  g1_exp.rs  g2_exp.rs  g2_exp_witness.rs  mod.rs
src/curves/: g1curve_target.rs  g2curve_target.rs  mod.rs
src/fields/: bn254base.rs  bn254scalar.rs  debug_tools.rs  fq12_target.rs  fq2_target.rs  fq_target.rs  fr_target.rs  mod.rs  native.rs
src/pairing/: final_exp_native.rs  final_exp_target.rs  miller_loop_native.rs  miller_loop_target.rs  mod.rs  pairing_target.rs
src/traits/: mod.rs  recursive_circuit_target.rs
