[package]
name = "plonky2-bn254-pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2"
rand = "0.8.5"
plonky2_ecdsa={git="https://github.com/qope/plonky2-ecdsa.git"}
plonky2_u32="0.1.0"
plonky2="0.1.2"
num = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
itertools = "0.10.5"
anyhow = "1.0.71"
hex = "0.4.3"
bitvec = "1"
rayon = "1.7.0"
log = { version = "0.4.19", default-features = false }
env_logger = "0.10"
